perf(smart-system): 优化密码生产策略，密码强度更高